test/semantics/programs/valid/example-program-4.guav
# example program 4

add_even_numbers() {
	numbers = [1, 2, 3, 4, 5, 6]
	result = 0
	for num in numbers {
		if num % 2 == 0 {
			result += 1
		}
	}
	ret result
}

print(add_even_numbers())